# Herman-OBU

./: CMakeLists.txt  qr_scanner.cpp
.github/workflows/: build.yml
examples/: cli_test.cpp  nfc_qt.cpp  obu_test.cpp  qt_gui.cpp
include/obu/common/: crc16.hpp  endian.hpp  helpers.hpp  protocol.hpp  response.hpp  types.hpp
include/obu/devices/: corvus_nfc_reader.hpp  mboard.hpp  nfc_reader.hpp  qr_scanner.hpp  terminal.hpp
include/obu/transport/: epdi.hpp  serial.cpp  serial.hpp
include/validator/: nfc_reader.hpp
src/: epdi.cpp  helpers.cpp  mboard.cpp  nfc_reader.cpp  qr_scanner.cpp  serial.cpp  terminal.cpp
src/obu/: corvus_nfc_reader.cpp  nfc_reader.cpp
src/validator/: nfc_reader.cpp
